# rs-agent

./: .gitignore  Cargo.toml  README.md  TODO.md
example/: snake.py  snake_game.py
src/: lib.rs  main.rs
src/agent/: loop.rs  mod.rs  registry.rs  state.rs  tool.rs
src/ai/: anthropic.rs  bedrock.rs  mod.rs  openai.rs  opencode_cli.rs  provider.rs  token_count.rs  types.rs
src/cli/: args.rs
src/context/: mod.rs
src/permission/: mod.rs
src/session/: mod.rs
src/tools/: bash.rs  edit.rs  find.rs  grep.rs  ls.rs  mod.rs  read.rs  web_fetch.rs  web_search.rs  write.rs
src/tui/: app.rs  mod.rs  renderer.rs
